<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/fragment3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="author" />

    <EditText
        android:id="@+id/authorInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author" />

    <Button
        android:id="@+id/authorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="vertical">

        <ListView
            android:id="@+id/authorResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/authorMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/authorBtnList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:text="@string/author_btn_list" />

        <Button
            android:id="@+id/authorBtnMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:text="@string/author_btn_map" />
    </LinearLayout>

</LinearLayout>