<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/single_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/tiny_2dp"
        android:layout_marginStart="@dimen/small_10dp"
        android:layout_marginTop="@dimen/tiny_2dp"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/single_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/single_first"
        android:layout_marginBottom="@dimen/tiny_2dp"
        android:layout_marginStart="@dimen/small_10dp"
        android:layout_marginTop="@dimen/tiny_2dp"
        android:gravity="center_vertical" />

</RelativeLayout>