<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/fragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="book" />

    <EditText
        android:id="@+id/bookInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/bookMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100" />


</LinearLayout>