<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="city" />

    <EditText
        android:id="@+id/cityInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_city" />

    <Button
        android:id="@+id/cityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn" />

    <ListView
        android:id="@+id/cityResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>