<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="location" />

    <EditText
        android:id="@+id/locationInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn" />

    <ListView
        android:id="@+id/locationResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>